--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=DESKTOP-SJ4CSHI;database=MultiShop2;trusted_connection=true;integrated security=true;encrypt=false;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
