--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AdminSettings": {
+    "UserName": "admin827",
+    "Email": "nici.mecidov@list.ru",
+    "Password": "Admin123"
+  },
   "AllowedHosts": "*"
 }
