AddBasket added, Email confirmation added, Checout added

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,12 @@
     "Email": "nici.mecidov@list.ru",
     "Password": "Admin123"
   },
+  "ApplicationEmail": {
+    "Email": "nicatmajidov@gmail.com",
+    "Password": "ybnroshmjnuhraiv",
+    "Host": "smtp.gmail.com",
+    "Port": "587"
+
+  },
   "AllowedHosts": "*"
 }
